Enhance SEO with Open Graph and Twitter meta tags
Added Open Graph and Twitter meta tags for better social media integration.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
     <title>UFA FILM | Produção Audiovisual de Alto Padrão</title>
     <meta name="description" content="UFA FILM - Produção Audiovisual de Alto Padrão. Cinema, Drone, Comerciais e Eventos filmados em 6K Open Gate.">
     
+    <!-- PREVIEW WHATSAPP/INSTAGRAM/FACEBOOK -->
+    <meta property="og:title" content="UFA FILM | Produção Audiovisual de Alto Padrão">
+    <meta property="og:description" content="Transformamos visões em experiências visuais inesquecíveis. Cinema, Drone, Comerciais e Eventos filmados em 6K Open Gate.">
+    <meta property="og:image" content="https://image.thum.io/get/width/1200/crop/630/noanimate/https://eclatnoble1.github.io/ufa.film/">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:type" content="website">
+    <meta property="og:locale" content="pt_BR">
+    <meta property="og:url" content="https://eclatnoble1.github.io/ufa.film/">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="UFA FILM | Produção Audiovisual de Alto Padrão">
+    <meta name="twitter:description" content="Transformamos visões em experiências visuais inesquecíveis.">
+    <meta name="twitter:image" content="https://image.thum.io/get/width/1200/crop/630/noanimate/https://eclatnoble1.github.io/ufa.film/">
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Orbitron:wght@400;500;700;900&display=swap" rel="stylesheet">
